<resources>
    <string name="app_name">FACTS News</string>
    <string name="homeBtn">Home</string>
    <string name="preferences">Preferences</string>
    <string name="colourPallet">Change Colour Pallet</string>
    <string name="localNews">Enable Local News</string>
    <string name="pushNotes">Enable Notifications</string>
    <string name="filterNews">Select News Filters</string>
    <string name="extraFilters">Enter Any Custom Filters</string>
    <string name="sports">Sports</string>
    <string name="gaming">Gaming</string>
    <string name="politics">Politics</string>
    <string name="entertainment">Entertainment</string>
    <string name="cinema">Cinema</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="login">Login</string>
    <string name="logOff">Log Off</string>
    <string name="settings">Settings</string>
    <string name="CreateNewUser">Create New User</string>
    <string name="EnterPword">Enter Password</string>
    <string name="EnterUser">Enter Username</string>
    <string name="AddElement">Add</string>
    <string name="AddFilters">Add Filter</string>
    <string name="favourites">Favourites</string>
    <string name="favDetails">Add your favourite articles and Click Clear to remove all favourites</string>
    <string name="nullTitle">No favourites added</string>
    <string name="nullURL">To add favourites click on an article and click on the favourites star</string>
    <string name="clear">Clear</string>
    <string name="edit">Edit</string>
    <string name="get_picture">Get Picture</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="enter_new_email">Enter New Email</string>
    <string name="add_new_user">Add New User</string>
    <string name="confirm">Confirm</string>
    <string name="notification_test">Notification Test</string>
    <string name="notifdescription">This and tonnes more stories one click away!</string>
    <string name="notificationTitle">Come and checkout stories on  </string>
    <string name="voice_search">Voice search</string>
    <string name="noUser">No User</string>
    <string name="enterEmail">Enter Email</string>
    <string name="enterPword">Enter Password</string>
    <string name="addToFav">Added to favourites</string>
    <string name="noLogIn">No User Logged In</string>
    <string name="userLoggedIn">User Logged In Successfully</string>
    <string name="LogOut">User Logged Out</string>
    <string name="authFail">Authentication failed</string>
    <string name="newUser">New User Added.</string>
    <string name="profUpdated">Profile Updated</string>
    <string name="updatefail">Failed to update</string>

    <string-array name="tabTitles">
        <item>Home</item>
        <item>For You</item>
        <item>Local</item>
    </string-array>
</resources>