<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="30dp"
        android:text="@string/preferences"
        android:textColor="@color/textColour"
        android:textSize="30sp" />



    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/localNews"
        android:textColor="@color/textColour" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/localNews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingEnd="100dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/pushNotes"
        android:textColor="@color/textColour" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/notifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingEnd="100dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/filterNews"
        android:textColor="@color/textColour" />

    <LinearLayout
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30sp"
            android:layout_marginStart="20sp"
            android:layout_weight="1"
            android:textColor="@color/textColour"
            android:text="@string/AddElement" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/newsFilters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        >

    </androidx.recyclerview.widget.RecyclerView>
</LinearLayout>